{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 109,
  "lineage": "beb5ea58-048e-9c46-cabd-fffc2768fdd6",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "public_ip_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.193.67.243",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-01-16T20:17:39.590-08:00",
            "id": "projects/prueba-tecnica-396100/regions/us-central1/addresses/public-ip-test-dba-01",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "public-ip-test-dba-01",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "prueba-tecnica-396100",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/regions/us-central1/addresses/public-ip-test-dba-01",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/zones/us-central1-a/instances/vm-instance-test-dba-01"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-01-12T19:15:52.534-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prueba-tecnica-396100/global/firewalls/allow-egress",
            "log_config": [],
            "name": "allow-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/global/networks/vpc-test-dba-gcp-01",
            "priority": 1000,
            "project": "prueba-tecnica-396100",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/global/firewalls/allow-egress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "link_sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-15T09:36:26.345-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prueba-tecnica-396100/global/firewalls/comunication-sql",
            "log_config": [],
            "name": "comunication-sql",
            "network": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/global/networks/vpc-test-dba-gcp-01",
            "priority": 1000,
            "project": "prueba-tecnica-396100",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/global/firewalls/comunication-sql",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vm_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22",
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-12T10:31:52.222-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prueba-tecnica-396100/global/firewalls/allow-http-ssh",
            "log_config": [],
            "name": "allow-http-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/global/networks/vpc-test-dba-gcp-01",
            "priority": 1000,
            "project": "prueba-tecnica-396100",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/global/firewalls/allow-http-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "priv_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.72.193.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-01-16T05:40:43.654-08:00",
            "id": "projects/prueba-tecnica-396100/global/addresses/priv-ip-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "priv-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/global/networks/vpc-test-dba-gcp-01",
            "prefix_length": 24,
            "project": "prueba-tecnica-396100",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/global/addresses/priv-ip-address"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20240110",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/zones/us-central1-a/disks/vm-instance-test-dba-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/prueba-tecnica-396100/zones/us-central1-a/instances/vm-instance-test-dba-01",
            "instance_id": "3541145769267092231",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "Rg-R6f7yfS4=",
            "metadata_startup_script": "#!/bin/bash\n\nsudo apt-get update\nsudo apt-get install -y python3-pip\nsudo apt-get install -y Flask \nsudo apt-get install -y psycopg2\nsudo apt-get install -y postgresql-client\nsudo apt-get install -y git\ngit clone https://github.com/CristianLatnok/files-py-json.git\ncd files-py-json\npython insert.py\necho \"Instalación y configuración completadas. Puedes acceder a la aplicación en http://localhost:80\"\n",
            "name": "vm-instance-test-dba-01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.193.67.243",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/global/networks/vpc-test-dba-gcp-01",
                "network_ip": "10.0.1.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/regions/us-central1/subnetworks/subnet-network-test-dba-01",
                "subnetwork_project": "prueba-tecnica-396100"
              }
            ],
            "project": "prueba-tecnica-396100",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/zones/us-central1-a/instances/vm-instance-test-dba-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_address.public_ip_vm",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vm_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/prueba-tecnica-396100/global/networks/vpc-test-dba-gcp-01",
            "mtu": 0,
            "name": "vpc-test-dba-gcp-01",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6311014824642624366",
            "project": "prueba-tecnica-396100",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/global/networks/vpc-test-dba-gcp-01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "cloud_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2024-01-14T16:59:26.517-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/prueba-tecnica-396100/regions/us-central1/routers/router-test-dba",
            "name": "router-test-dba",
            "network": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/global/networks/vpc-test-dba-gcp-01",
            "project": "prueba-tecnica-396100",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/regions/us-central1/routers/router-test-dba"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "cloud_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "prueba-tecnica-396100/us-central1/router-test-dba/nat-gcp-test-dba",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-gcp-test-dba",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "prueba-tecnica-396100",
            "region": "us-central1",
            "router": "router-test-dba",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.cloud_router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "db_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-12T10:31:53.741-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/prueba-tecnica-396100/regions/us-central1/subnetworks/subnet-network-test-dba-02",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "subnet-network-test-dba-02",
            "network": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/global/networks/vpc-test-dba-gcp-01",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "prueba-tecnica-396100",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/regions/us-central1/subnetworks/subnet-network-test-dba-02",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vm_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-12T10:31:53.245-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/prueba-tecnica-396100/regions/us-central1/subnetworks/subnet-network-test-dba-01",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "subnet-network-test-dba-01",
            "network": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/global/networks/vpc-test-dba-gcp-01",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "prueba-tecnica-396100",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prueba-tecnica-396100/regions/us-central1/subnetworks/subnet-network-test-dba-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}